docs: implement new code preview blocks
Implement new code preview blocks style on docs

--- a/docs/components/article-content.html
+++ b/docs/components/article-content.html
@@ -8,145 +8,81 @@ description: Component representing the content of an article.
     <h2 class="m-b--full">Example</h2>
     <h3>Article content</h3>
     <p class="m-b--full">The article content component contains styling for headings, tables and lists.</p>
-    <div class="c-articleContent">        
-        <h2>H2 heading</h2>        
-        <h3>H3 heading</h3>
-        <h4>H4 heading</h4>
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <div class="c-articleContent">        
+                <h2>H2 heading</h2>        
+                <h3>H3 heading</h3>
+                <h4>H4 heading</h4>
 
-        <h2>Tables</h2>
-        <table>
-            <tbody>
-                <tr>
-                    <td>
-                        <a rel="nofollow" href="#">
-                            <img src="https://images-na.ssl-images-amazon.com/images/I/41xpnkDufrL.jpg"></a>
-                    </td>
-                    <td>
-                        <a rel="nofollow" href="#">Fractal Design Define R5 Black ATX Midtower
-                            Silent PC Computer Case</a>
-                        <p>
-                            A well designed case inside and out. An understated Scandinavian design with
-                            sound-absorbing material. It's highly configurable which makes it easy to work in and
-                            means you can get creative with your build!
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a rel="nofollow" href="#">
-                            <img src="https://images-na.ssl-images-amazon.com/images/I/61EfU%2BM-pPL._SL1000_.jpg"></a>
-                    </td>
-                    <td>
-                        <a rel="nofollow" href="http://amzn.to/2ewMhvQ">Intel Core i7&nbsp;6800&nbsp;K&nbsp;3.40 GHz
-                            LGA2011&nbsp;V3&nbsp;15MB Cache High End Desktop Processor CPU - Black</a>
-                        <p>
-                            Part of Intel's Broadwell-E CPU range. The i7-6800K features six CPU cores (12 threads)
-                            and 28 PCIe lanes. Out of the chips in the range I consider this to be the sweet spot,
-                            the prices increase dramatically and aren't worth it for the extra performance.
-                        </p>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <a rel="nofollow" href="#">
-                            <img src="https://images-na.ssl-images-amazon.com/images/I/515oYSMHlvL._SY450_.jpg"></a>
-                    </td>
-                    <td>
-                        <a rel="nofollow" href="#">Asus X99-A/U3.1 ATX USB 3.0 Motherboard</a>
-                        <p>
-                            Reasonably priced and full of features, you get a lot for your money with this board. It
-                            even has Asus's Aura RGB lighting system, so you can make it look all pretty. It doesn't
-                            come with built in wifi or Bluetooth. If that is a requirement for you either get a card
-                            or go for the PRO or DELUXE model.
-                        </p>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-        <h2>Lists</h2>
-        <h4>Unordered list</h4>
-        <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-        </ul>
-        <h4>Ordered list</h4>
-        <ol>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-        </ol>
-    </div>
-    <div class="sg-example">
+                <h2>Tables</h2>
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a rel="nofollow" href="#">
+                                    <img src="https://images-na.ssl-images-amazon.com/images/I/41xpnkDufrL.jpg"></a>
+                            </td>
+                            <td>
+                                <a rel="nofollow" href="#">Fractal Design Define R5 Black ATX Midtower
+                                    Silent PC Computer Case</a>
+                                <p>
+                                    A well designed case inside and out. An understated Scandinavian design with
+                                    sound-absorbing material. It's highly configurable which makes it easy to work in and
+                                    means you can get creative with your build!
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a rel="nofollow" href="#">
+                                    <img src="https://images-na.ssl-images-amazon.com/images/I/61EfU%2BM-pPL._SL1000_.jpg"></a>
+                            </td>
+                            <td>
+                                <a rel="nofollow" href="http://amzn.to/2ewMhvQ">Intel Core i7&nbsp;6800&nbsp;K&nbsp;3.40 GHz
+                                    LGA2011&nbsp;V3&nbsp;15MB Cache High End Desktop Processor CPU - Black</a>
+                                <p>
+                                    Part of Intel's Broadwell-E CPU range. The i7-6800K features six CPU cores (12 threads)
+                                    and 28 PCIe lanes. Out of the chips in the range I consider this to be the sweet spot,
+                                    the prices increase dramatically and aren't worth it for the extra performance.
+                                </p>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a rel="nofollow" href="#">
+                                    <img src="https://images-na.ssl-images-amazon.com/images/I/515oYSMHlvL._SY450_.jpg"></a>
+                            </td>
+                            <td>
+                                <a rel="nofollow" href="#">Asus X99-A/U3.1 ATX USB 3.0 Motherboard</a>
+                                <p>
+                                    Reasonably priced and full of features, you get a lot for your money with this board. It
+                                    even has Asus's Aura RGB lighting system, so you can make it look all pretty. It doesn't
+                                    come with built in wifi or Bluetooth. If that is a requirement for you either get a card
+                                    or go for the PRO or DELUXE model.
+                                </p>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+                <h2>Lists</h2>
+                <h4>Unordered list</h4>
+                <ul>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ul>
+                <h4>Ordered list</h4>
+                <ol>
+                    <li>Item 1</li>
+                    <li>Item 2</li>
+                    <li>Item 3</li>
+                </ol>
+            </div>
+        </div>    
 {% highlight html %}
 <div class="c-articleContent">        
-    <h2>H2 heading</h2>        
-    <h3>H3 heading</h3>
-    <h4>H4 heading</h4>
-
-    <h2>Tables</h2>
-    <table>
-        <tbody>
-            <tr>
-                <td>
-                    <a rel="nofollow" href="#">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/41xpnkDufrL.jpg"></a>
-                </td>
-                <td>
-                    <a rel="nofollow" href="#">Fractal Design Define R5 Black ATX Midtower
-                        Silent PC Computer Case</a>
-                    <p>
-                        A well designed case inside and out. An understated Scandinavian design with
-                        sound-absorbing material. It's highly configurable which makes it easy to work in and
-                        means you can get creative with your build!
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <a rel="nofollow" href="#">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/61EfU%2BM-pPL._SL1000_.jpg"></a>
-                </td>
-                <td>
-                    <a rel="nofollow" href="http://amzn.to/2ewMhvQ">Intel Core i7&nbsp;6800&nbsp;K&nbsp;3.40 GHz
-                        LGA2011&nbsp;V3&nbsp;15MB Cache High End Desktop Processor CPU - Black</a>
-                    <p>
-                        Part of Intel's Broadwell-E CPU range. The i7-6800K features six CPU cores (12 threads)
-                        and 28 PCIe lanes. Out of the chips in the range I consider this to be the sweet spot,
-                        the prices increase dramatically and aren't worth it for the extra performance.
-                    </p>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <a rel="nofollow" href="#">
-                        <img src="https://images-na.ssl-images-amazon.com/images/I/515oYSMHlvL._SY450_.jpg"></a>
-                </td>
-                <td>
-                    <a rel="nofollow" href="#">Asus X99-A/U3.1 ATX USB 3.0 Motherboard</a>
-                    <p>
-                        Reasonably priced and full of features, you get a lot for your money with this board. It
-                        even has Asus's Aura RGB lighting system, so you can make it look all pretty. It doesn't
-                        come with built in wifi or Bluetooth. If that is a requirement for you either get a card
-                        or go for the PRO or DELUXE model.
-                    </p>
-                </td>
-            </tr>
-        </tbody>
-    </table>
-    <h2>Lists</h2>
-    <h4>Unordered list</h4>
-    <ul>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ul>
-    <h4>Ordered list</h4>
-    <ol>
-        <li>Item 1</li>
-        <li>Item 2</li>
-        <li>Item 3</li>
-    </ol>
+    ...
 </div>
 {% endhighlight %}
     </div>
