--- a/docs/components/aside-nav.html
+++ b/docs/components/aside-nav.html
@@ -6,42 +6,44 @@ description: Side menu for displaying content such as tags or categories. Contai
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
     <h3>Categories list with count</h3>
-    <aside class="c-asideNav">
-        <h2 class="c-asideNav-title">Categories</h2>
-        <ol class="c-asideNav-items">
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    ASP.NET <span class="c-asideNav-item-count">17</span>
-                </a>
-            </li>
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    Visual Studio <span class="c-asideNav-item-count">12</span>
-                </a>
-            </li>
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    CSS <span class="c-asideNav-item-count">8</span>
-                </a>
-            </li>
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    NDepend <span class="c-asideNav-item-count">5</span>
-                </a>
-            </li>
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    WinRT <span class="c-asideNav-item-count">4</span>
-                </a>
-            </li>
-            <li class="c-asideNav-item">
-                <a class="block" href="#">
-                    Azure <span class="c-asideNav-item-count">4</span>
-                </a>
-            </li>
-        </ol>
-    </aside>
-    <div class="sg-example">
+    <div class="sg-preview">
+        <div class="sg-preview-example">            
+            <aside class="c-asideNav">
+                <h2 class="c-asideNav-title">Categories</h2>
+                <ol class="c-asideNav-items">
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            ASP.NET <span class="c-asideNav-item-count">17</span>
+                        </a>
+                    </li>
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            Visual Studio <span class="c-asideNav-item-count">12</span>
+                        </a>
+                    </li>
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            CSS <span class="c-asideNav-item-count">8</span>
+                        </a>
+                    </li>
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            NDepend <span class="c-asideNav-item-count">5</span>
+                        </a>
+                    </li>
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            WinRT <span class="c-asideNav-item-count">4</span>
+                        </a>
+                    </li>
+                    <li class="c-asideNav-item">
+                        <a class="block" href="#">
+                            Azure <span class="c-asideNav-item-count">4</span>
+                        </a>
+                    </li>
+                </ol>
+            </aside>    
+        </div>
 {% highlight html %}
 <aside class="c-asideNav">
     <h2 class="c-asideNav-title">Categories</h2>
