--- a/docs/components/author.html
+++ b/docs/components/author.html
@@ -5,30 +5,32 @@ description: Component representing the author of an article. Contains an image,
 ---
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
-    <div class="illStayHere container">
-        <div class="c-author">
-            <strong class="visuallyHidden">Author:</strong>
-            <img class="c-author-image" src="https://images.iambacon.co.uk/blog/avatar.jpg"
-                alt="Profile picture for Colin Bacon">
-            <a href="#" class="c-author-title" rel="author">Colin Bacon</a>
-            <p class="c-author-desc">Colin bacon is a professional development engineer, with a passion for C# and creating
-                compelling frontend experiences with HTML and CSS. In his free time he can be found teaching skiing at his
-                local slope.</p>
-            <div class="c-author-links">
-                <ul class="o-listInline m-b--full">
-                    <li>
-                        <a class="social linkedIn hideText m-r--full" rel="me" title="Connect with Colin Bacon on LinkedIn"
-                            href="#">LinkedIn</a>
-                    </li>
-                    <li>
-                        <a class="social twitter hideText m-r--full" rel="me" title="Follow Colin Bacon on Twitter"
-                            href="#">Twitter</a>
-                    </li>
-                </ul>
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <div class="illStayHere container">
+                <div class="c-author">
+                    <strong class="visuallyHidden">Author:</strong>
+                    <img class="c-author-image" src="https://images.iambacon.co.uk/blog/avatar.jpg"
+                        alt="Profile picture for Colin Bacon">
+                    <a href="#" class="c-author-title" rel="author">Colin Bacon</a>
+                    <p class="c-author-desc">Colin bacon is a professional development engineer, with a passion for C# and creating
+                        compelling frontend experiences with HTML and CSS. In his free time he can be found teaching skiing at his
+                        local slope.</p>
+                    <div class="c-author-links">
+                        <ul class="o-listInline m-b--full">
+                            <li>
+                                <a class="social linkedIn hideText m-r--full" rel="me" title="Connect with Colin Bacon on LinkedIn"
+                                    href="#">LinkedIn</a>
+                            </li>
+                            <li>
+                                <a class="social twitter hideText m-r--full" rel="me" title="Follow Colin Bacon on Twitter"
+                                    href="#">Twitter</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="sg-example">
 {% highlight html %}
 <div class="illStayHere container">
     <div class="c-author">
