--- a/docs/components/buttons.html
+++ b/docs/components/buttons.html
@@ -6,17 +6,21 @@ description: Buttons of all shapes and sizes. Well, just one shape and size.
 <section class="m-t--full">
     <h2 class="m-b--full">Examples</h2>
     <h3>Tag button</h3>
-    <a class="c-btn c-btn--tag" href="#">Azure web apps</a>
-    <div class="sg-example">
-        {% highlight html %}
-        <a class="c-btn c-btn--tag" href="#">Azure web apps</a>
-        {% endhighlight %}
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <a class="c-btn c-btn--tag" href="#">Azure web apps</a>
+        </div>
+{% highlight html %}
+<a class="c-btn c-btn--tag" href="#">Azure web apps</a>
+{% endhighlight %}
     </div>
     <h3>Full width tag button</h3>
-    <a class="c-btn c-btn--tag c-btn--full" href="#">Azure web apps</a>
-    <div class="sg-example">
-        {% highlight html %}
-        <a class="c-btn c-btn--tag c-btn--full" href="#">Azure web apps</a>
-        {% endhighlight %}
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <a class="c-btn c-btn--tag c-btn--full" href="#">Azure web apps</a>
+        </div>
+{% highlight html %}
+<a class="c-btn c-btn--tag c-btn--full" href="#">Azure web apps</a>
+{% endhighlight %}
     </div>
 </section>
