--- a/docs/components/header.html
+++ b/docs/components/header.html
@@ -6,26 +6,28 @@ description: Component representing a page header. Contains a logo and navigatio
 
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
-    <header class="c-header">
-        <div class="layoutContainer">
-            <h2 class="c-header-logo">
-                <a href="#">I am Bacon</a>
-            </h2>
-            <p class="visuallyHidden"> Colin Bacon, web developer.</p>
-            <nav class="c-header-nav">
-                <h3 class="visuallyHidden">Site navigation</h3>
-                <ul class="o-listInline">
-                    <li class="c-header-nav-link">
-                        <a href="#">Blog</a>
-                    </li>
-                    <li class="c-header-nav-link">
-                        <a href="#">About</a>
-                    </li>
-                </ul>
-            </nav>
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <header class="c-header">
+                <div class="layoutContainer">
+                    <h2 class="c-header-logo">
+                        <a href="#">I am Bacon</a>
+                    </h2>
+                    <p class="visuallyHidden"> Colin Bacon, web developer.</p>
+                    <nav class="c-header-nav">
+                        <h3 class="visuallyHidden">Site navigation</h3>
+                        <ul class="o-listInline">
+                            <li class="c-header-nav-link">
+                                <a href="#">Blog</a>
+                            </li>
+                            <li class="c-header-nav-link">
+                                <a href="#">About</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </header>
         </div>
-    </header>
-    <div class="sg-example">
 {% highlight html %}
 <header class="c-header">
     <div class="layoutContainer">
