--- a/docs/components/meter.html
+++ b/docs/components/meter.html
@@ -7,18 +7,20 @@ description: Component representing a meter element.
 <section class="m-t--full">
     <p class="m-b--full">The meter component provides consistent styling of the HTML <code>&lt;meter&gt;</code> element across browsers.</p>
     <h2 class="m-b--full">Example</h2>
-    <meter value="1">
-        <span class="c-meter">
-            <span style="width: 70%;" class="c-meter-gauge">70%</span>
-        </span>
-    </meter>
-    <div class="sg-example">
-        {% highlight html %}
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <meter value="1">
+                <span class="c-meter">
+                    <span style="width: 70%;" class="c-meter-gauge">70%</span>
+                </span>
+            </meter>
+        </div>
+{% highlight html %}
 <meter value="0.7058823529411765">
     <span class="c-meter">
         <span style="width: 70%;" class="c-meter-gauge">70%</span>
     </span>
 </meter>
-        {% endhighlight %}
+{% endhighlight %}
     </div>
 </section>
