--- a/docs/components/pagination.html
+++ b/docs/components/pagination.html
@@ -6,19 +6,21 @@ description: Component representing the pagination for a list that spans across 
 
 <section class="m-t--full">
     <h2 class="m-b--full">Example</h2>
-    <div class="sg-example">
-        <nav class="c-pagination">
-            <div class="g-paging">
-                <a class="c-pagination-page" href="#">1</a>
-                <span class="c-pagination-page" href="#">...</span>
-                <a class="c-pagination-page" href="#">4</a>
-                <a class="c-pagination-page c-pagination-page--current" href="#">5</a>
-                <a class="c-pagination-page" href="#">6</a>
-            </div>
-            <div class="g-paging-more">
-                <a class="c-pagination-more" href="#">Show more</a>
-            </div>
-        </nav>
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <nav class="c-pagination">
+                <div class="g-paging">
+                    <a class="c-pagination-page" href="#">1</a>
+                    <span class="c-pagination-page" href="#">...</span>
+                    <a class="c-pagination-page" href="#">4</a>
+                    <a class="c-pagination-page c-pagination-page--current" href="#">5</a>
+                    <a class="c-pagination-page" href="#">6</a>
+                </div>
+                <div class="g-paging-more">
+                    <a class="c-pagination-more" href="#">Show more</a>
+                </div>
+            </nav>
+        </div>
 {% highlight html %}
 <nav class="c-pagination">
     <div class="g-paging">
