--- a/docs/components/page-title.html
+++ b/docs/components/page-title.html
@@ -7,18 +7,20 @@ description: Component representing the title of a page.
 <section class="m-t--full">
     <p class="m-b--full">The page title component can be used with a triangle using the state class <code>has-triangle</code>.</p>
     <h2 class="m-b--full">Example</h2>
-    <div class="c-pageTitle">
-        <div class="has-triangle">
-            <h1 class="c-pageTitle-headline c-pageTitle-headline--sm">Recent posts for Category 'ASP.NET'</h1>
+    <div class="sg-preview">
+        <div class="sg-preview-example m-b--full">
+            <div class="c-pageTitle">
+                <div class="has-triangle">
+                    <h1 class="c-pageTitle-headline c-pageTitle-headline--sm">Recent posts for Category 'ASP.NET'</h1>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="sg-example m-t--full">
-        {% highlight html %}
+{% highlight html %}
 <div class="c-pageTitle">
     <div class="has-triangle">
         <h1 class="c-pageTitle-headline c-pageTitle-headline--sm">Recent posts for Category 'ASP.NET'</h1>
     </div>
 </div>
-        {% endhighlight %}
+{% endhighlight %}
     </div>
 </section>
