--- a/docs/components/tag.html
+++ b/docs/components/tag.html
@@ -5,11 +5,13 @@ description: Component representing an article category label or tag.
 ---
 
 <section class="m-t--full">
-    <h2 class="m-b--full">Example</h2>    
-    <a href="#" class="c-tag c-tag--category">ASP.NET</a>
-    <div class="sg-example">
-        {% highlight html %}
+    <h2 class="m-b--full">Example</h2>
+    <div class="sg-preview">
+        <div class="sg-preview-example">
+            <a href="#" class="c-tag c-tag--category">ASP.NET</a>    
+        </div>
+{% highlight html %}
 <a href="#" class="c-tag c-tag--category">ASP.NET</a>
-        {% endhighlight %}
+{% endhighlight %}
     </div>
 </section>
